kubernetes/argocd/applications/observability/grafana/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  labels:
    route.scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Grafana
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/href: https://grafana.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=grafana
    gethomepage.dev/widget.type: grafana
    gethomepage.dev/widget.url: https://grafana.vaderrp.com
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames: ["grafana.vaderrp.com"]
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
      backendRefs:
        - name: grafana
          port: 80
